# HumanComputerInteraction

./: CMakeLists.txt  README.md  main.cpp
helpers/: Functions.cpp  colorcode.cpp  common.cpp  common.h
